--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-
-<router-outlet></router-outlet>
+<div className="min-h-screen bg-lowWhite text-darkText dark:bg-darkBlue dark:text-white">
+  <app-header></app-header>
+  <router-outlet></router-outlet>
+</div>
