Added elements and styling of  all-countries component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div className="min-h-screen bg-lowWhite text-darkText dark:bg-darkBlue dark:text-white">
   <app-header></app-header>
+  <app-all-countries></app-all-countries>
   <router-outlet></router-outlet>
 </div>
