Added element and styling to country-page component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div className="min-h-screen bg-lowWhite text-darkText dark:bg-darkBlue dark:text-white">
   <app-header></app-header>
-  <app-all-countries></app-all-countries>
+  <!-- <app-all-countries></app-all-countries> -->
+  <app-country-page></app-country-page>
   <router-outlet></router-outlet>
 </div>
