--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
-<div className="min-h-screen bg-lowWhite text-darkText dark:bg-darkBlue dark:text-white">
-  <app-header></app-header>
-  <!-- <app-all-countries></app-all-countries> -->
-  <!-- <app-country-page countryName="ghana" ></app-country-page> -->
+<div
+  class="min-h-screen bg-lowWhite text-darkText dark:bg-darkBlue dark:text-white"
+>
   <router-outlet></router-outlet>
 </div>
