Implemented theme logo toggle  in header component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div
   class="min-h-screen bg-lowWhite text-darkText dark:bg-darkBlue dark:text-white"
 >
+  <app-header></app-header>
   <router-outlet></router-outlet>
 </div>
