--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,23 +4,8 @@
   >
     <div class="flex justify-between m-0 w-[100%]">
       <div class="font-extrabold laptop:text-2xl">Where in the world ?</div>
-      <button class="flex gap-2" onClick="{themeChanger}">
+      <button class="flex gap-2" (click)="toggleTheme()">
         <div class="pt-1">
-          <svg
-            width="16"
-            height="16"
-            viewBox="0 0 16 16"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-            *ngIf="theme === 'light'"
-          >
-            <path
-              fillRule="evenodd"
-              clipRule="evenodd"
-              d="M10.8426 11.052C7.73486 11.052 5.21543 8.74226 5.21543 5.89457C5.21543 4.82024 5.57343 3.82526 6.18514 3C3.75229 3.75612 2 5.86498 2 8.35045C2 11.4708 4.75943 14 8.16286 14C10.8743 14 13.1757 12.3945 14 10.1636C13.1 10.7238 12.0129 11.052 10.8426 11.052Z"
-              fill="white"
-            />
-          </svg>
           <svg
             width="16"
             height="16"
@@ -34,11 +19,26 @@
               clipRule="evenodd"
               d="M10.8426 11.052C7.73486 11.052 5.21543 8.74226 5.21543 5.89457C5.21543 4.82024 5.57343 3.82526 6.18514 3C3.75229 3.75612 2 5.86498 2 8.35045C2 11.4708 4.75943 14 8.16286 14C10.8743 14 13.1757 12.3945 14 10.1636C13.1 10.7238 12.0129 11.052 10.8426 11.052Z"
               fill="white"
+            />
+          </svg>
+          <svg
+            width="16"
+            height="16"
+            viewBox="0 0 16 16"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+            *ngIf="theme === 'light'"
+          >
+            <path
+              fillRule="evenodd"
+              clipRule="evenodd"
+              d="M10.8426 11.052C7.73486 11.052 5.21543 8.74226 5.21543 5.89457C5.21543 4.82024 5.57343 3.82526 6.18514 3C3.75229 3.75612 2 5.86498 2 8.35045C2 11.4708 4.75943 14 8.16286 14C10.8743 14 13.1757 12.3945 14 10.1636C13.1 10.7238 12.0129 11.052 10.8426 11.052Z"
+              fill="white"
               stroke="#111517"
             />
           </svg>
         </div>
-        Dark mode
+        {{ theme === "dark" ? "Dark mode" : "Light mode" }}
       </button>
     </div>
   </div>
