--- a/src/app/filter/filter.component.html
+++ b/src/app/filter/filter.component.html
@@ -6,7 +6,8 @@
       <input type="text"
       placeholder='Search for a country...'
       class=' bg-white dark:bg-blue h-12 dark:text-white rounded-lg focus:outline-none'
-      value=search
+      [(ngModel)]="searchValue"
+      (input)="find"
       />
     </div>
     <div class=' relative bg-white dark:bg-blue w-48 h-12  text-lg shadow-sm rounded-lg overflow-clip laptop:h-14 laptop:w-48' >
