--- a/src/app/all-countries/all-countries.component.html
+++ b/src/app/all-countries/all-countries.component.html
@@ -1,7 +1,7 @@
 <div
   class="flex flex-col flex-shrink-0 font-Nunito max-w-[1440px] gap-10 laptop:mx-auto laptop:px-16 pc:min-w-[1020px] pt-12 pb-10]"
 >
-  <app-filter></app-filter>
+  <app-filter (searcher)="searchHandler($event)"></app-filter>
   <div
     class="grid mx-12 grid-cols-1 gap-14 laptop:mx-0 laptop:grid-cols-4 laptop:gap-8 pc:gap-14"
   >
