--- a/src/app/filter/filter.component.html
+++ b/src/app/filter/filter.component.html
@@ -7,20 +7,22 @@
       placeholder='Search for a country...'
       class=' bg-white dark:bg-blue h-12 dark:text-white rounded-lg focus:outline-none'
       [(ngModel)]="searchValue"
-      (input)="find()"
+      (input)="search()"
       />
     </div>
     <div class=' relative bg-white dark:bg-blue w-48 h-12  text-lg shadow-sm rounded-lg overflow-clip laptop:h-14 laptop:w-48' >
       <select 
-        class=' bg-white dark:bg-blue appearance-none bg-opacity-5 w-full h-full pl-3 outline-none'>
-          <option  class='hidden' value="" disabled>Filter by region</option>
-          <option value="" disabled></option>
-          <option class='' value="Africa">Africa</option>
-          <option value="Asia">Asia</option>
-          <option value="Europe">Europe</option>
-          <option value="Americas">Americas</option>
-          <option value="Oceania">Oceania</option>
-          <option value="" disabled></option>
+        class=' bg-white dark:bg-blue appearance-none bg-opacity-5 w-full h-full pl-3 outline-none'
+        [(ngModel)]="filterValue"
+        (change)="filter()">
+          <option  class='hidden' [ngValue]="''" disabled >Filter by region</option>
+          <option [ngValue]="" disabled></option>
+          <option [ngValue]="'Africa'">Africa</option>
+          <option [ngValue]="'Asia'">Asia</option>
+          <option [ngValue]="'Europe'">Europe</option>
+          <option [ngValue]="'Americas'">Americas</option>
+          <option [ngValue]="'Oceania'">Oceania</option>
+          <option [ngValue]="" disabled></option>
       </select> 
       <span class=' absolute left-36 pt-2 laptop:pt-3 pointer-events-none'>
         <!-- <KeyboardArrowDownIcon  color='inherit'/> -->
