Corrected the search and back arrow icons

--- a/src/app/filter/filter.component.html
+++ b/src/app/filter/filter.component.html
@@ -1,7 +1,7 @@
 <div class='m-0 flex flex-col pt-6 px-4 gap-6 laptop:px-0 laptop:flex-row laptop:justify-between w-auto'>
     <div class='flex gap-6 pl-8 bg-white shadow-sm dark:bg-blue h-14 laptop:w-[30rem]  rounded-lg'>
       <div class=' pt-4'>
-          <!-- <SearchIcon color='inherit'/> -->
+        <mat-icon fontIcon="search"></mat-icon>
       </div>
       <input type="text"
       placeholder='Search for a country...'
