--- a/src/app/filter/filter.component.html
+++ b/src/app/filter/filter.component.html
@@ -24,8 +24,8 @@
           <option [ngValue]="'Oceania'">Oceania</option>
           <option [ngValue]="" disabled></option>
       </select> 
-      <span class=' absolute left-36 pt-2 laptop:pt-3 pointer-events-none'>
-        <!-- <KeyboardArrowDownIcon  color='inherit'/> -->
+      <span class=' absolute left-36 pt-3 laptop:pt-3 pointer-events-none'>
+        <mat-icon class=" rotate-90" fontIcon="arrow_right"></mat-icon>
     </span>
     </div> 
   </div>
